Largeur maximale pour les faire-part

--- a/app/views/illustratrice.html
+++ b/app/views/illustratrice.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 		<div class="col-sm-4">
-			<div class="pull-right medaillon">
+			<div class="text-center medaillon">
 				<img class="img-responsive" src="images/portrait.png"/>
 			</div>
 		</div>
