--- a/app/views/mariage.html
+++ b/app/views/mariage.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="fairePart">
+	<div class="fairePart center-block">
 		<h4 class="text-center">Mariage de Jean et Elodie<h4>
 		<flex-slider slide="s in slidesJeanElodie" animation="slide" slideshow="false">
 			<li>
@@ -7,7 +7,7 @@
 			</li>
 		</flex-slider>
 	</div>
-	<div class="fairePart">
+	<div class="fairePart center-block">
 		<h4 class="text-center">Mariage de Kevin et Noémie<h4>
 		<flex-slider slide="s in slidesKevinNoemie" animation="slide" slideshow="false">
 			<li>
