--- a/app/views/babyshower.html
+++ b/app/views/babyshower.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="fairePart">
+	<div class="fairePart center-block">
 		<h4 class="text-center">Baby shower de Marlène<h4>
 		<flex-slider slide="s in slidesBabyShower" animation="slide" slideshow="false">
 			<li>
