Modification contact@elodiedetoeuf.fr

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -6,7 +6,7 @@
 					<h3 class="panel-title">Par mail</h3>
 				</div>
 				<div class="panel-body">
-					<a href="mailto:elodie.detoeuf@gmail.com">elodie.detoeuf@gmail.com</a>
+					<a href="mailto:elodie.detoeuf@gmail.com">contact@elodiedetoeuf.fr</a>
 				</div>
 			</div>
 			<div class="panel panel-default text-center">
