--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-offset-3 col-sm-6 article">
+		<div class="col-sm-3 col-sm-offset-3 article">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par mail</h3>
@@ -9,20 +9,14 @@
 					<a href="mailto:elodie.detoeuf@gmail.com">contact@elodiedetoeuf.fr</a>
 				</div>
 			</div>
+		</div>
+		<div class="col-sm-3 article">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par téléphone</h3>
 				</div>
 				<div class="panel-body">
 					06 03 23 32 46
-				</div>
-			</div>
-			<div class="panel panel-default text-center">
-				<div class="panel-heading">
-					<h3 class="panel-title">Par voie postale</h3>
-				</div>
-				<div class="panel-body">
-					Elodie Detoeuf<br/>4 Rue Edison<br/>69003 LYON
 				</div>
 			</div>
 		</div>
