--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -211,3 +211,7 @@ $nav-height:60px;
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     background: none !important;
 }
+
+a.navbar-brand {
+    padding-top: 5px !important;
+}
