--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -235,4 +235,5 @@ a.navbar-brand {
     -o-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    text-transform: uppercase;
 }
