Ajout note me contacter

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -21,4 +21,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="text-center">
+				N'hésitez pas à me contacter pour toute information complémentaire.
+			</div>
+		</div>
+	</div>
 </div>
