--- a/app/views/tarifs.html
+++ b/app/views/tarifs.html
@@ -11,8 +11,10 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	<div class="row">
 		<div class="col-sm-12" style="margin-top:30px">
 			<p class="asterisque">* Une illustration correspond aux dessins figurant sur une face du support.</p>
 		</div>
+	</div>
 </div>
