Meilleure mise en page des contacts pour les résolutions medium

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-3 col-sm-offset-3 article">
+		<div class="col-md-3 col-md-offset-3 article">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par mail</h3>
@@ -10,7 +10,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-3 article">
+		<div class="col-md-3 article">
 			<div class="panel panel-default text-center">
 				<div class="panel-heading">
 					<h3 class="panel-title">Par téléphone</h3>
