--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,9 +15,10 @@ $rose:#ed217c;
 
 @font-face {
   font-family: 'ChunkFive';
-  src: local('ChunkFive-Roman'), url('Chunkfive.woff') format('woff'), url('/fonts/Chunkfive.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
+    src: url('fonts/Chunkfive.eot');
+    src: local('☺'), url('/fonts/Chunkfive.woff') format('woff'), url('/fonts/Chunkfive.otf') format('opentype'), url('/fonts/Chunkfive.ttf') format('truetype'), url('/fonts/Chunkfive.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .browsehappy {
